--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -10,7 +10,7 @@
         android:id="@+id/barcode_scanner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/my_page"
+        android:layout_above="@+id/viewrecipe"
         android:layout_below="@+id/title">
 
     </com.journeyapps.barcodescanner.DecoratedBarcodeView>
