--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".activity.CameraActivity">
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
@@ -11,70 +12,67 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_above="@+id/my_page"
-        android:layout_below="@+id/title">
+        android:layout_below="@+id/NFC">
 
     </com.journeyapps.barcodescanner.DecoratedBarcodeView>
 
     <Button
         android:id="@+id/my_page"
-        android:layout_width="236dp"
+        android:backgroundTint="@color/button_default"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_above="@+id/filter"
         android:layout_alignStart="@+id/filter"
-        android:text="mypage"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:text="my page"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/filter"
-        android:layout_width="236dp"
+        android:backgroundTint="@color/button_default"
+        android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="filter"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.802"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="25dp"
+        android:layout_alignParentLeft="true" />
 
 
     <TextView
         android:id="@+id/title"
-        android:layout_margin="8dp"
-        android:textSize="23dp"
+        android:textColor="#000000"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignBaseline="@+id/NFC"
+        android:layout_alignBottom="@+id/NFC"
         android:layout_centerHorizontal="true"
-        android:text="QR CAMERA" />
+        android:text="QR CAMERA"
+        android:textSize="23dp" />
 
     <Button
         android:id="@+id/NFC"
+        android:backgroundTint="@color/button_default"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:text="NFC" />
 
     <Button
         android:id="@+id/viewrecipe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/my_page"
-        android:layout_alignEnd="@+id/my_page"
-        android:layout_alignStart="@+id/my_page"
-        android:text="viewrecipe" />
+        android:backgroundTint="@color/button_default"
+        android:layout_width="90dp"
+        android:layout_height="100dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="10dp"
+        android:text="view recipe" />
 
 </RelativeLayout>
