--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -8,10 +8,12 @@
 
     <Button
         android:id="@+id/sendout"
+        android:backgroundTint="@color/button_default"
         android:layout_width="236dp"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp"
         android:text="sendout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,5 +34,15 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Recipe" />
+
+    <Button
+        android:id="@+id/viewOtherRecipe"
+        android:backgroundTint="@color/button_default"
+        android:layout_width="236dp"
+        android:layout_height="50dp"
+        android:layout_above="@+id/sendout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="12dp"
+        android:text="Button" />
 
 </RelativeLayout>
