--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -45,4 +45,13 @@
         android:layout_marginBottom="12dp"
         android:text="Button" />
 
+    <TextView
+        android:id="@+id/myFilteredList"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="52dp"
+        android:text="myList" />
+
 </RelativeLayout>
