--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="15dp"
         android:text="sendout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,31 +27,41 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_margin="8dp"
-        android:textSize="23dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Recipe" />
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="10dp"
+        android:text="Recipe Name"
+        android:textSize="23dp" />
 
-    <Button
-        android:id="@+id/viewOtherRecipe"
-        android:backgroundTint="@color/button_default"
-        android:layout_width="236dp"
-        android:layout_height="50dp"
+    <ListView
+        android:id="@+id/ingredients"
+        android:layout_width="320dp"
+        android:layout_height="250dp"
+        android:layout_alignStart="@+id/otherRecipes"
+        android:layout_below="@+id/title"
+        android:scrollbars="vertical" />
+
+    <ListView
+        android:id="@+id/otherRecipes"
+        android:layout_width="320dp"
+        android:layout_height="130dp"
+        android:layout_below="@+id/ingredients"
         android:layout_above="@+id/sendout"
+        android:layout_marginBottom="15dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="12dp"
-        android:text="Button" />
+        android:layout_marginTop="40dp"
+        android:scrollbars="vertical" />
 
     <TextView
-        android:id="@+id/myFilteredList"
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/ingredients"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
-        android:text="myList" />
+        android:layout_marginTop="21dp"
+        android:text="다른 레시피/메뉴" />
 
 </RelativeLayout>
