--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -4,74 +4,78 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/total_layout"
     tools:context=".activity.CameraActivity">
+
+    <TextView
+        android:id="@+id/fooding"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="FOODING"
+        android:textColor="#111"
+        android:textSize="30dp"
+        android:layout_marginTop="@dimen/menu_bar_margin"
+        android:layout_centerHorizontal="true"/>
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/barcode_scanner"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_above="@+id/my_page"
-        android:layout_below="@+id/NFC">
+        android:layout_height="wrap_content"
+        android:layout_above="@id/menu"
+        android:layout_marginBottom="@dimen/menu_bar_margin"
+        android:layout_below="@id/NFC">
 
     </com.journeyapps.barcodescanner.DecoratedBarcodeView>
 
-    <Button
-        android:id="@+id/my_page"
-        android:backgroundTint="@color/button_default"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_above="@+id/filter"
-        android:layout_alignStart="@+id/filter"
-        android:text="my page"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentLeft="true" />
-
-    <Button
-        android:id="@+id/filter"
-        android:backgroundTint="@color/button_default"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="filter"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="25dp"
-        android:layout_alignParentLeft="true" />
-
-
-    <TextView
-        android:id="@+id/title"
-        android:textColor="#000000"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/NFC"
-        android:layout_alignBottom="@+id/NFC"
-        android:layout_centerHorizontal="true"
-        android:text="QR CAMERA"
-        android:textSize="23dp" />
-
-    <Button
+    <ImageButton
         android:id="@+id/NFC"
-        android:backgroundTint="@color/button_default"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:padding="10dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp"
-        android:text="NFC" />
+        android:scaleType="centerInside"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/nfc"
+        android:background="@color/transparent"/>
 
-    <Button
-        android:id="@+id/viewrecipe"
-        android:backgroundTint="@color/button_default"
-        android:layout_width="90dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="25dp"
-        android:layout_marginBottom="10dp"
-        android:text="view recipe" />
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="@dimen/menu_bar_margin"
+        android:layout_alignParentBottom="true">
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/setting"
+            android:src="@mipmap/settings" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/filter"
+            android:src="@mipmap/filter" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/camera"
+            android:src="@mipmap/camera_color" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/recentlyViewed"
+            android:src="@mipmap/list" />
+    </LinearLayout>
 
 </RelativeLayout>
