--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -8,57 +8,127 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_margin="8dp"
-        android:textSize="23dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:text="Filter" />
+        android:layout_marginTop="14dp"
+        android:textColor="#111"
+        android:textAllCaps="true"
+        android:textSize="30dp"
+        android:text="search" />
 
-    <EditText
-        android:id="@+id/searchText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/title"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="" />
+    <View
+        android:id="@+id/title_bar"
+        style="@style/title_bar" />
 
-    <Button
-        android:id="@+id/addButton"
-        android:layout_width="wrap_content"
+    <View
+        android:id="@+id/menu_bar"
+        style="@style/menu_bar" />
+
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/searchText"
-        android:layout_alignParentBottom="true"
-        android:text="add" />
+        android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="@dimen/menu_bar_margin"
+        android:layout_alignParentBottom="true">
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/setting"
+            android:src="@mipmap/settings" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/filter"
+            android:src="@mipmap/filter" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/camera"
+            android:src="@mipmap/camera" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/recentlyViewed"
+            android:src="@mipmap/list" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="50dp"
+        android:layout_below="@id/title_bar">
+
+        <EditText
+            android:id="@+id/searchText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:layout_below="@+id/title_bar"
+            android:layout_centerHorizontal="true"
+            android:hint="Ingredient Name"
+            android:textColor="#111"
+            android:ems="5"
+            android:inputType="textPersonName|textNoSuggestions"
+            android:background="@drawable/edit_text_border"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:layout_marginRight="8dp"
+            android:text="" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="25dp"
+            android:layout_gravity="center_vertical"
+            android:id="@+id/addButton"
+            android:src="@mipmap/add" />
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/JsonTextview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchText"
+        android:layout_below="@+id/search"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="30dp"
         android:gravity="center"
+        android:textSize="25dp"
         android:text="No match" />
 
     <ListView
         android:id="@+id/resultList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/JsonTextview"
-        android:layout_above="@+id/addButton"
-        android:layout_marginTop="60dp" />
+        android:choiceMode="singleChoice"
+        android:layout_marginLeft="60dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/search"
+        android:layout_above="@+id/menu_bar"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp" />
 
-    <Button
+    <!--<Button
         android:id="@+id/MylistBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/searchText"
         android:layout_below="@+id/resultList"
-        android:text="My list" />
+        android:text="My list" />-->
 
 </RelativeLayout>
