--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.ViewRecipeActivity">
 
-    <Button
+    <!--<Button
         android:id="@+id/sendout"
         android:backgroundTint="@color/button_default"
         android:layout_width="236dp"
@@ -23,7 +23,7 @@
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1" />-->
 
     <TextView
         android:id="@+id/title"
@@ -31,37 +31,86 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="18dp"
-        android:layout_marginBottom="10dp"
-        android:text="Recipe Name"
-        android:textSize="23dp" />
+        android:layout_marginTop="14dp"
+        android:textColor="#111"
+        android:textAllCaps="true"
+        android:textSize="30dp"
+        android:text="recipe name" />
+
+    <View
+        android:id="@+id/title_bar"
+        style="@style/title_bar" />
+
+    <View
+        android:id="@+id/menu_bar"
+        style="@style/menu_bar" />
+
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="@dimen/menu_bar_margin"
+        android:layout_alignParentBottom="true">
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/setting"
+            android:src="@mipmap/settings" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/filter"
+            android:src="@mipmap/filter" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/camera"
+            android:src="@mipmap/camera" />
+
+        <ImageButton
+            style="@style/icons"
+            android:layout_height="@dimen/menu_icon_size"
+            android:id="@+id/recentlyViewed"
+            android:src="@mipmap/list" />
+
+    </LinearLayout>
 
     <ListView
         android:id="@+id/ingredients"
-        android:layout_width="320dp"
-        android:layout_height="250dp"
-        android:layout_alignStart="@+id/otherRecipes"
-        android:layout_below="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="230dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/title_bar"
         android:scrollbars="vertical" />
 
     <ListView
         android:id="@+id/otherRecipes"
-        android:layout_width="320dp"
-        android:layout_height="130dp"
-        android:layout_below="@+id/ingredients"
-        android:layout_above="@+id/sendout"
+        android:layout_width="match_parent"
+        android:layout_height="140dp"
+        android:layout_below="@+id/otherRecipesTitle"
+        android:layout_above="@+id/menu_bar"
+        android:layout_marginLeft="60dp"
         android:layout_marginBottom="15dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="10dp"
         android:scrollbars="vertical" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/otherRecipesTitle"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ingredients"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:text="다른 레시피/메뉴" />
+        android:textColor="#111"
+        android:layout_marginTop="18dp"
+        android:text="Other Recipes / Menus" />
 
 </RelativeLayout>
