--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/settingsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.fooding.userapp.activity.SettingsActivity">
@@ -74,6 +75,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:orientation="vertical" >
 
             <TextView
@@ -84,7 +87,7 @@
                 android:textAllCaps="true"
                 android:layout_marginBottom="5dp"
                 android:textSize="20dp"
-                android:text="text boldness"/>
+                android:text="글자 두께"/>
 
             <com.github.channguyen.rsv.RangeSliderView
                 android:id="@+id/textBoldness"
@@ -147,10 +150,19 @@
 
         </LinearLayout>
 
+        <View
+            android:id="@+id/tmp1"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="#3111" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:orientation="vertical" >
 
             <TextView
@@ -161,7 +173,7 @@
                 android:textAllCaps="true"
                 android:layout_marginBottom="5dp"
                 android:textSize="20dp"
-                android:text="text boldness"/>
+                android:text="글자 크기"/>
 
             <com.github.channguyen.rsv.RangeSliderView
                 android:id="@+id/textSize"
@@ -229,6 +241,88 @@
                     android:textSize="13dp"
                     android:text="very\nbig"/>
 
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/tmp2"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:background="#3111" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp" >
+
+                <TextView
+                    android:id="@+id/etcTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#111"
+                    android:textAllCaps="true"
+                    android:layout_marginBottom="15dp"
+                    android:textSize="20dp"
+                    android:text="기타"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/translationCaption"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textColor="#111"
+                        android:textAllCaps="true"
+                        android:textSize="15dp"
+                        android:text="english translation"/>
+
+                    <Switch
+                        android:id="@+id/translationSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:track="@drawable/switch_track_selector"
+                        android:thumb="@drawable/switch_thumb"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/themeCaption"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textColor="#111"
+                        android:textAllCaps="true"
+                        android:textSize="15dp"
+                        android:text="어두운 테마"/>
+
+                    <Switch
+                        android:id="@+id/themeSwitch"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:track="@drawable/switch_track_selector"
+                        android:thumb="@drawable/switch_thumb"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
