--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -244,85 +244,93 @@
 
             </LinearLayout>
 
-            <View
-                android:id="@+id/tmp2"
+        </LinearLayout>
+
+        <View
+            android:id="@+id/tmp2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="#3111" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/etcTitle"
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="15dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:background="#3111" />
+                android:text="기타"
+                android:textAllCaps="true"
+                android:textColor="#111"
+                android:textSize="20dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp" >
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/etcTitle"
-                    android:layout_width="match_parent"
+                    android:id="@+id/translationCaption"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:textColor="#111"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="3"
+                    android:text="english translation"
                     android:textAllCaps="true"
-                    android:layout_marginBottom="15dp"
-                    android:textSize="20dp"
-                    android:text="기타"/>
+                    android:textColor="#111"
+                    android:textSize="15dp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <!--<Switch-->
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/translationSwitch"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1.2"
+                    app:theme="@style/switchCompatStyle" />
+                <!--android:track="@drawable/switch_track_selector"
+                    android:thumb="@drawable/switch_thumb"/>-->
 
-                    <TextView
-                        android:id="@+id/translationCaption"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:textColor="#111"
-                        android:textAllCaps="true"
-                        android:textSize="15dp"
-                        android:text="english translation"/>
+            </LinearLayout>
 
-                    <Switch
-                        android:id="@+id/translationSwitch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:track="@drawable/switch_track_selector"
-                        android:thumb="@drawable/switch_thumb"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="15dp"
+                android:orientation="horizontal">
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/themeCaption"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginLeft="10dp"
-                    android:orientation="horizontal">
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="3"
+                    android:text="어두운 테마"
+                    android:textAllCaps="true"
+                    android:textColor="#111"
+                    android:textSize="15dp" />
 
-                    <TextView
-                        android:id="@+id/themeCaption"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:textColor="#111"
-                        android:textAllCaps="true"
-                        android:textSize="15dp"
-                        android:text="어두운 테마"/>
-
-                    <Switch
-                        android:id="@+id/themeSwitch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:track="@drawable/switch_track_selector"
-                        android:thumb="@drawable/switch_thumb"/>
-
-                </LinearLayout>
+                <!--<Switch-->
+                <android.support.v7.widget.SwitchCompat
+                    android:id="@+id/themeSwitch"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1.2"
+                    app:theme="@style/switchCompatStyle" />
+                <!--android:track="@drawable/switch_track_selector"
+                    android:thumb="@drawable/switch_thumb"/>-->
 
             </LinearLayout>
 
