--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,5 +46,11 @@
         <item name="android:layout_marginTop">68dp</item>
         <item name="android:background">#111</item>
     </style>
+    
+    <style name="switchCompatStyle">
+        <item name="colorControlActivated">@color/yellowAccent</item>
+        <!--<item name="colorSwitchThumbNormal">@color/gray</item>-->
+        <!--<item name="trackTint">@color/gray</item>-->
+    </style>
 
 </resources>
