영양정보 출력 기능 추가

--- a/app/src/main/res/layout/activity_view_recipe.xml
+++ b/app/src/main/res/layout/activity_view_recipe.xml
@@ -125,4 +125,12 @@
         android:layout_marginBottom="6dp"
         android:text="Other Recipes / Menus" />
 
+    <Button
+        android:id="@+id/viewNutrient"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/title"
+        android:layout_alignParentStart="true"
+        android:text="nutrient" />
+
 </RelativeLayout>
