--- a/app/src/main/res/layout/activity_viewnutrient.xml
+++ b/app/src/main/res/layout/activity_viewnutrient.xml
@@ -117,6 +117,7 @@
         android:layout_below="@+id/divide"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="56dp"
+        android:textSize="30dp"
         android:text="Total calorie" />
 
 </RelativeLayout>
