--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="yellowAccent">#f2b035</color>
     <color name="yellowAccentAlpha">#ECC67F</color>
     <color name="gray">#b9b9b9</color>
+    <color name="myWhite">#ffffff</color>
+    <color name="myBlack">#111</color>
 
 </resources>
