--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,26 @@
         <!--<item name="trackTint">@color/gray</item>-->
     </style>
 
+    <style name="nutrient">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:layout_weight">1.5</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:padding">2dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/myBlack</item>
+    </style>
+
+    <style name="nutrient.info">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">12dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginRight">0dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textAlignment">textEnd</item>
+        <item name="android:textColor">@color/myBlack</item>
+    </style>
+
 </resources>
